# openwrt_ssh_mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_GUIDE.md  Dockerfile  IPv6_GUIA_COMPLETA.md  LICENSE  PRODUCTION_READY.md  QUICKSTART_DOCKER.md  README.md  SETUP_COMPLETADO.md  TEST_OPKG.md  check_ipv6.py  claude_desktop_config.json  docker-compose.yml  docker-mcp.ps1  explain_ipv6_pd.py  mcp-openwrt.code-workspace  optimize_ipv6.py  pyproject.toml  start-mcp-vscode.ps1  test_connection.py  test_mcp_tools.py
openwrt_ssh_mcp/: __init__.py  config.py  security.py  server.py  ssh_client.py  tools.py
tests/: README.md  test_security.py
