[project]
name = "openwrt-ssh-mcp"
version = "1.0.0"
description = "MCP Server for OpenWRT router management via SSH with support for system, network, OpenThread, and package management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenWRT SSH MCP Contributors"}
]
keywords = ["mcp", "openwrt", "ssh", "router", "openthread", "iot", "matter", "thread"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/openwrt-ssh-mcp"
Documentation = "https://github.com/yourusername/openwrt-ssh-mcp#readme"
Repository = "https://github.com/yourusername/openwrt-ssh-mcp"
Issues = "https://github.com/yourusername/openwrt-ssh-mcp/issues"
Changelog = "https://github.com/yourusername/openwrt-ssh-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[project.scripts]
openwrt-mcp = "openwrt_ssh_mcp.server:run"
